# xmonadrc

./: .gitignore  LICENSE  MyImageButtonDecoration.hs  build  xfce-xmonad.start  xmonadrc.cabal  xmonadrc.hs  xmonadrc.hs.minimal
