cabal-version:      2.4
name:               xmonadrc
version:            0.1.0.0
synopsis:
homepage:
license:            BSD-3-Clause
author:
maintainer:

-- category:
-- extra-source-files: CHANGELOG.md

executable xmonadrc
    main-is:          xmonadrc.hs
    other-modules:    MyImageButtonDecoration
    build-depends:    base >=4.16.4.0 && <4.19.0.0
                    , xmonad
                    , xmonad-contrib
                    , xmonad-extras
                    , containers
    default-language: Haskell2010
    ghc-options:      -Wall -O2
